# puc-final-thesis

./: .dockerignore  .env  .gitignore  Databasediagram.drawio  Dockerfile  Procfile  README.md  Sem Título.drawio  app.ts  docker-compose.yml  package-lock.json  package.json
backend/: .env  .gitignore  app.ts  database.sqlite  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/controllers/: transactionController.ts  userController.ts
backend/prisma/: dev.db  schema.prisma
backend/routes/: authenticationRoutes.ts  transactionRoutes.ts
backend/src/: index.ts  routes.ts
backend/src/controllers/: userController.ts
backend/src/db/: database.ts
backend/src/middlewares/: userAuth.ts
backend/src/routes/: authentication.ts  routes.ts  transaction.ts  users.ts  wallets.ts
controllers/: authenticationController.ts  transactionController.ts  userController.ts
frontend/: package-lock.json  package.json
nginx/: nginx.conf
prisma/: dev.db
prisma-backend/backend/: package-lock.json
prisma-backend/backend/prisma/: prisma.ts  schema.prisma
prisma/migrations/20230313113520_/: migration.sql
prisma/migrations/20230321232410_updated_sector_field_name/: migration.sql
puc-documentation/: classdiagram.drawio  dbdiagram.drawio
puc_final_thesis_backend/: docker-compose.yml  pyproject.toml
routes/: authenticationRoutes.ts  transactionRoutes.ts  userRoutes.ts
web-app/: package-lock.json  package.json
web-app/src/: App.js  index.html
web-app/src/app/: app-routing.module.ts  app.module.ts
web-app/src/components/: Dashboard.jsx  (+3 more)
(+27 files in other folders)
