[tool.poetry]
name = "puc-final-thesis-backend"
version = "0.1.0"
description = ""
authors = ["Gustavo Caetano <CaetanooG@hotmail.com>"]
readme = "README.md"
packages = [{include = "puc_final_thesis_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.mkdocks.dependencies]
mkdocs-material = "^9.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
